[tool.poetry]
name = "repl_python3_pandorasbot"
version = "0.1.0"
description = ""
authors = ["avvie1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
quantumrandom = "^1.9.0"
pycryptodome = "^3.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
